--- a/classes/SObjectHelperTest.cls
+++ b/classes/SObjectHelperTest.cls
@@ -1,6 +1,7 @@
 /**
  * @class:   SObjectHelperTest.cls
  * @author:  Jason Auger
+ * @github:  https://github.com/Varout/SObjectHelper
  * @desc:    Test class for SObjectHelper.cls
  * @licence: Copyright (c) 2020, Jason Auger
  *           Permission is hereby granted, free of charge, to any person obtaining a copy
